[gd_scene load_steps=6 format=3 uid="uid://d30drvce5njop"]

[ext_resource type="Script" uid="uid://cdy8r5lxsy556" path="res://Scripts/opening.gd" id="1_f222t"]
[ext_resource type="Texture2D" uid="uid://cif5du8kcvw0p" path="res://Art Assets/Screens/Opening/Opening_1.png" id="2_gwggy"]
[ext_resource type="Texture2D" uid="uid://co1mgchgs7c3p" path="res://Art Assets/Screens/Opening/opening_2.png" id="3_jecf7"]
[ext_resource type="Texture2D" uid="uid://cpd23ikdx5bcl" path="res://Art Assets/Screens/Opening/opening_3.png" id="4_eqvst"]

[sub_resource type="LabelSettings" id="LabelSettings_l7ai8"]
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Opening" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f222t")
screen_1 = ExtResource("2_gwggy")
screen_2 = ExtResource("3_jecf7")
screen_3 = ExtResource("4_eqvst")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_eqvst")

[node name="SkipButton" type="Button" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 586.0
offset_right = 126.0
offset_bottom = 628.0
text = "SKIP
"

[node name="Text" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 24.0
offset_top = 250.0
offset_right = 818.0
offset_bottom = 325.0
text = "The Island Town is about to be struk by a tsunami... this is the end"
label_settings = SubResource("LabelSettings_l7ai8")

[node name="Text2" type="Label" parent="CanvasLayer"]
offset_left = 31.0
offset_top = 43.0
offset_right = 1119.0
offset_bottom = 118.0
text = "The Island Town is about to be struk by a tsunami... this is the end"
label_settings = SubResource("LabelSettings_l7ai8")
autowrap_mode = 3

[node name="Minigame1" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 69.0
offset_top = 366.0
offset_right = 449.0
offset_bottom = 477.0
text = "Compete in the Steak Eating contest in the Steakhouse. There are 2 possible outcomes, each with different dialogues"
label_settings = SubResource("LabelSettings_l7ai8")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Minigame2" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 702.0
offset_top = 361.0
offset_right = 1082.0
offset_bottom = 482.0
text = "A criminal has been imprisoned, will you release him so he dosen't face the end inside a cell?
(1 possible outcome results in end game)"
label_settings = SubResource("LabelSettings_l7ai8")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Advancetext" type="Label" parent="CanvasLayer"]
offset_left = 346.0
offset_top = 594.0
offset_right = 1140.0
offset_bottom = 669.0
text = "Press Space to Advance"
label_settings = SubResource("LabelSettings_l7ai8")
horizontal_alignment = 2

[connection signal="pressed" from="CanvasLayer/SkipButton" to="." method="_on_skip_button_pressed"]
